# retrival-model

./: .gitignore  README.md  pyproject.toml
logs/: events.out.tfevents.1735275478.work.25344.0
src/: dataset.py  loop.py  model.py  process_data.py  trainable.py  usage.py
src/configurations/: configs.json  validation.py
