[tool.poetry]
name = "retrieval"
version = "0.1.0"
description = "Retrieval model training"
authors = ["Atsamaz <makeev.aa.home@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.4"
datasets = "^3.2.0"
torch = {version = "^2.5.1+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.20.1+cpu", source = "pytorch_cpu"}
bs4 = "^0.0.2"
transformers = "^4.47.1"
pathlib = "^1.0.1"
tqdm = "^4.67.1"
pytorch-metric-learning = "^2.8.1"
typer = {extras = ["all"], version = "^0.15.1"}
tensorboard = "^2.18.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



